optimisation - updated navbar

--- a/html/about.html
+++ b/html/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Quiz, Voucher">
+    
     <meta name="description" content="Fresh and locally sourced produce nearby you! Visit our store online or in person to see current offer!">
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,25 +31,25 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home</a>
+                    <a href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="offer.html">Offer <span class="sr-only">(current)</span></a>
+                  <a href="offer.html">Offer <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="newsletter.html">Newsletter</a>
+                  <a href="newsletter.html">Newsletter</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="quiz.html">Win a Voucher!</a>
+                  <a href="quiz.html">Win a Voucher!</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="directions.html">Directions</a>
+                  <a href="directions.html">Directions</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a href="about.html">About</a>
                 </li>
               </ul>
             </div>
