--- a/html/offer.html
+++ b/html/offer.html
@@ -32,25 +32,25 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Home</a>
+                        <a href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="offer.html">Offer <span class="sr-only">(current)</span></a>
+                      <a href="offer.html">Offer <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="newsletter.html">Newsletter</a>
+                      <a href="newsletter.html">Newsletter</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="quiz.html">Win a Voucher!</a>
+                      <a href="quiz.html">Win a Voucher!</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact Us</a>
+                      <a href="contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="directions.html">Directions</a>
+                      <a href="directions.html">Directions</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="about.html">About</a>
+                      <a href="about.html">About</a>
                     </li>
                   </ul>
                 </div>
