--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="index.html"><img src="./images/mick logo.avif" alt="logo"></a>
         </div>
         <!--Bootstrap Navigation-->
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-light">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -30,25 +30,25 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="html/offer.html">Offer <span class="sr-only">(current)</span></a>
+                  <a href="html/offer.html">Offer <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="html/newsletter.html">Newsletter</a>
+                  <a href="html/newsletter.html">Newsletter</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="html/quiz.html">Win a Voucher!</a>
+                  <a href="html/quiz.html">Win a Voucher!</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="html/contact.html">Contact Us</a>
+                  <a href="html/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="html/directions.html">Directions</a>
+                  <a href="html/directions.html">Directions</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="html/about.html">About</a>
+                  <a href="html/about.html">About</a>
                 </li>
               </ul>
             </div>
